Updated issue with projects header
project header was overlapping content. Error has been resolved

--- a/scss/projects.scss
+++ b/scss/projects.scss
@@ -4,10 +4,6 @@ $gradient-value2: #260C5A;
     flex-direction: column;
     height: auto;
     padding-bottom: 15px;
-
-    h1{
-        margin-top: 115px;
-    }
 }
 
 .projectLine{
